# multi_hypothesis_tracking

./: .directory  CMakeLists.txt  README.md  package.xml
documentation/: general_functionality.md  usage.md
include/multi_hypothesis_tracking/: definitions.h  hungarian.h  hypothesis.h  hypothesis_base.h  hypothesis_base_factory.h  hypothesis_factory.h  hypothesis_factory_interface.h  hypothesis_interface.h  kalman_filter.h  mot_publisher.h  multi_human_tracking_node.h  multi_hypothesis_tracker.h  multi_hypothesis_tracking_base.h  multi_hypothesis_tracking_node.h  multi_hypothesis_tracking_node_for_humans.h  multi_hypothesis_tracking_node_for_pose_arrays.h  utils.h
include/multi_hypothesis_tracking/hypotheses/: hypothesis.h  hypothesis_base.h  hypothesis_base_factory.h  hypothesis_factory.h  hypothesis_factory_interface.h  hypothesis_for_human_pose.h  hypothesis_for_human_pose_factory.h  hypothesis_for_sparse_lidar.h  hypothesis_for_sparse_lidar_factory.h  hypothesis_interface.h  hypothesis_with_bounding_box.h  hypothesis_with_bounding_box_factory.h  hypothesis_with_points.h  hypothesis_with_points_factory.h
include/multi_hypothesis_tracking/hypotheses/factories/: hypothesis_base_factory.h  hypothesis_for_human_pose_factory.h  hypothesis_for_sparse_lidar_factory.h  hypothesis_with_bounding_box_factory.h  hypothesis_with_points_factory.h
include/multi_hypothesis_tracking/nodes/: multi_hypothesis_tracking_base.h  multi_hypothesis_tracking_node.h  multi_hypothesis_tracking_node_for_human_poses.h  multi_hypothesis_tracking_node_for_humans.h  multi_hypothesis_tracking_node_for_pose_arrays.h  multi_hypothesis_tracking_node_for_sparse_lidar.h
include/multi_hypothesis_tracking/visualizer/: mot_publisher.h  utils.h  visualizations_publisher.h
include/multi_object_tracking/: hypothesis.h  kalman_filter.h  mot_publisher.h  multi_hypothesis_tracker.h  multi_object_tracking_node.h
launch/: human_tracking.rviz  human_tracking_visualization.launch  multi_human_tracking.launch  multi_hypothesis_tracking.launch  multi_object_tracking.launch
src/: hungarian.cpp  hypothesis.cpp  hypothesis_base.cpp  kalman_filter.cpp  mot_publisher.cpp  multi_human_tracking_node.cpp  multi_hypothesis_tracker.cpp  multi_hypothesis_tracking_base.cpp  multi_hypothesis_tracking_node.cpp  multi_hypothesis_tracking_node_for_humans.cpp  multi_hypothesis_tracking_node_for_pose_arrays.cpp  multi_object_tracking_node.cpp
src/hypotheses/: hypothesis.cpp  hypothesis_base.cpp  hypothesis_for_human_pose.cpp  hypothesis_for_sparse_lidar.cpp  hypothesis_with_bounding_box.cpp  hypothesis_with_points.cpp
src/nodes/: multi_hypothesis_tracking_base.cpp  multi_hypothesis_tracking_node.cpp  multi_hypothesis_tracking_node_for_human_poses.cpp  multi_hypothesis_tracking_node_for_humans.cpp  multi_hypothesis_tracking_node_for_pose_arrays.cpp  multi_hypothesis_tracking_node_for_sparse_lidar.cpp
src/visualizer/: mot_publisher.cpp  visualizations_publisher.cpp
