<package format="2">
	<name>multi_hypothesis_tracking</name>
	<version>0.0.0</version>
	<description>
		Provides generic libraries for Multi Hypothesis Tracking and a Ros node providing detection 
		messages to the tracker.
	</description>

	<author email="stueckler@ais.uni-bonn.de">Jörg Stückler</author>
	<maintainer email="max.schwarz@uni-bonn.de">Max Schwarz</maintainer>
	<maintainer email="s6jarazl@uni-bonn.de">Jan Razlaw</maintainer>
	
	<license>BSD</license>
	
	<buildtool_depend>catkin</buildtool_depend>
	<depend>eigen</depend>
	<depend>geometry_msgs</depend>
	<depend>multi_hypothesis_tracking_msgs</depend>
	<depend>pcl_ros</depend>
	<depend>roscpp</depend>
	<depend>sensor_msgs</depend>
	<depend>std_msgs</depend>
	<depend>tf</depend>
	<depend>tf_conversions</depend>
	<depend>visualization_msgs</depend>
</package>