<package format="2">
	<name>multi_hypothesis_tracking</name>
	<version>0.0.0</version>
	<description>
		Provides generic libraries for Multi Hypothesis Tracking.
		Exemplary ROS nodes accepting different detection message types show how to use the tracker.
		
		Once adopted from Jörg Stückler and Max Schwarz.
	</description>

	<author email="razlaw@ais.uni-bonn.de">Jan Razlaw</author>
	<maintainer email="razlaw@ais.uni-bonn.de">Jan Razlaw</maintainer>
	
	<license>BSD</license>
	
	<buildtool_depend>catkin</buildtool_depend>
	<depend>eigen</depend>
	<depend>geometry_msgs</depend>
	<depend>person_msgs</depend>
	<depend>multi_hypothesis_tracking_msgs</depend>
	<depend>pcl_ros</depend>
	<depend>roscpp</depend>
	<depend>sensor_msgs</depend>
	<depend>std_msgs</depend>
	<depend>tf</depend>
	<depend>tf_conversions</depend>
	<depend>visualization_msgs</depend>
</package>